# testAutoMake

./: Makefile  Makefile.am  Makefile.in  README.md  config.h  config.h.in  config.h.in~  config.status  configure  configure.ac  configure.scan
autom4te.cache/: output.0  output.1  output.2  requests  traces.0  traces.1  traces.2
lib/: CppAdd.h  CppAddWrapper.cpp  Makefile  Makefile.in
lib/.deps/: CppAdd.Plo  CppAddWrapper.Plo
lib/.libs/: libadd.so.0.0.0
lib/include/: CppAddWrapper.h
lib/src/: CppAdd.cpp  CppAdd.lo  CppAddWrapper.cpp  CppAddWrapper.lo  Makefile  Makefile.am  Makefile.in  config.h  config.status  configure  configure.ac  configure.scan  libadd.la  libaddd.la  libtool
lib/src/.deps/: CppAdd.Plo  CppAddWrapper.Plo
lib/src/.libs/: libadd.la  libadd.lai  libadd.so.0  libadd.so.0.0.0  libaddd.la  libaddd.lai  libaddd.so.0.0.0
lib/src/autom4te.cache/: output.0  output.1  output.2  requests  traces.0  traces.1  traces.2
src/: Makefile  Makefile.am  Makefile.in  main.c  testadd  testadd.c
src/.deps/: testadd.Po  testgrpc.Po
